Add proof of concept with an image resizing sample 🎉 (#2)